Fix overlapping hexagons

--- a/frontend/src/components/yourResultsPage/CommentsSummary.css
+++ b/frontend/src/components/yourResultsPage/CommentsSummary.css
@@ -9,6 +9,7 @@
     padding: 10px;
     margin-bottom: 15px;
     box-shadow: 1px 1px 4px black;
+    z-index: -1;
 }
 
 .comment-summary-row-doubloons {
